--- a/content/settings.json
+++ b/content/settings.json
@@ -11,8 +11,8 @@
     "social": {
       "behance": "https://behance.com",
       "github": "https://github.com/Jatin794",
-      "medium": "https://konstantinmuenster.medium.com",
-      "linkedin": "https://www.linkedin.com/in/konstantin-muenster/",
+      "twitter": "https://twitter.com/JatinNagpalTG",
+      "linkedin": "https://www.linkedin.com/in/jatinngpl/",
       "mail": "mailto:admin@jatinnagpal.com"
     }
   },
