--- a/content/settings.json
+++ b/content/settings.json
@@ -11,7 +11,7 @@
     "social": {
       "behance": "https://behance.com",
       "github": "https://github.com/Jatin794",
-      "medium": "https://twitter.com/JatinNagpalTG",
+      "medium": "https://nagpal.medium.com/",
       "linkedin": "https://www.linkedin.com/in/jatinngpl/",
       "mail": "mailto:admin@jatinnagpal.com"
     }
